--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -16,8 +16,8 @@
       {% block sidebar %}
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All books</a></li>
-          <li><a href="">All authors</a></li>
+          <li><a href="">All Blog</a></li>
+          <li><a href="">All Blogger</a></li>
         </ul>
      {% endblock %}
       </div>
