--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
+  <h1>Blog Home</h1>
+  <p>Welcome to Blog!</p>
+  <h2>Dynamic content</h2>
+  <p>The Blog has the following record counts:</p>
+  <ul>
+    <li><strong>Blog:</strong> {{ num_blog }}</li>
+    <li><strong>Blogger:</strong> {{ num_Blogger }}</li>
+    <li><strong>Comment:</strong> {{ num_comment }}</li>
+  </ul>
 {% endblock %}
