Initialize blog list and blog detail template

--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -16,7 +16,7 @@
       {% block sidebar %}
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All Blog</a></li>
+          <li><a href="{% url 'blogs' %}">All Blog</a></li>
           <li><a href="">All Blogger</a></li>
         </ul>
      {% endblock %}
