--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -6,7 +6,7 @@
   <ul>
     {% for blog in blog_list %}
       <li>
-        <a href="{{ blog.get_absolute_url }}">{{ book.title }}</a> ({{book.Blogger}})
+        <a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a>, {{blog.date}} by <a href="">{{blog.blogger}}</a>
       </li>
     {% endfor %}
   </ul>
