--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,23 +3,16 @@
 {% block content %}
   <h1>Title: {{ blog.title }}</h1>
 
-  <p><strong>Author:</strong> <a href="">{{ blog.author }}</a></p> <!-- author detail link not yet defined -->
-  <p><strong>Summary:</strong> {{ book.summary }}</p>
-  <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
-  <p><strong>Language:</strong> {{ book.language }}</p>  
-  <p><strong>Genre:</strong> {% for genre in book.genre.all %} {{ genre }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>  
+  <p><strong>Author:</strong> <a href="{{blog.blogger.get_absolute_url}}">{{ blog.blogger }}</a></p> <!-- author detail link not yet defined -->
+  <p><strong>Date:</strong> {{ blog.date }}</p>
+  <p><strong>Post:</strong> {{ blog.post }}</p> 
 
   <div style="margin-left:20px;margin-top:20px">
-    <h4>Copies</h4>
+    <h4>Comments</h4>
 
-    {% for copy in book.bookinstance_set.all %}
+    {% for comment in blog.comment_set.all %}
       <hr>
-      <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display }}</p>
-      {% if copy.status != 'a' %}
-        <p><strong>Due to be returned:</strong> {{copy.due_back}}</p>
-      {% endif %}
-      <p><strong>Imprint:</strong> {{copy.imprint}}</p>
-      <p class="text-muted"><strong>Id:</strong> {{copy.id}}</p>
+      <p>{{comment.content}}</p>
     {% endfor %}
   </div>
 {% endblock %}
