--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -1,6 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+  {{is_paginated }}
   <h1>Title: {{ blog.title }}</h1>
 
   <p><strong>Author:</strong> <a href="{{blog.blogger.get_absolute_url}}">{{ blog.blogger }}</a></p> <!-- author detail link not yet defined -->
