--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -18,6 +18,12 @@
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'blogs' %}">All Blog</a></li>
           <li><a href="{% url 'bloggers' %}">All Blogger</a></li>
+          {% if user.is_authenticated %}
+            <li>User: {{ user.get_username }}</li>
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+          {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+   {% endif %} 
         </ul>
      {% endblock %}
       </div>
