Change User SignUp Form

--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -22,7 +22,7 @@
             <li>User: {{ user.get_username }}</li>
             <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
           {% else %}
-            <li><a href="{% url 'register'%}?next={{request.path}}">Register</a></li> 
+            <li><a href="{% url 'signup'%}?next={{request.path}}">Sign up</a></li> 
             <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
    {% endif %} 
         </ul>
